# dark-hypercore

./: Cargo.toml  PRD.md  README.md  phase1.md
.cargo/: config.toml
benches/: matching.rs
docs/: phase1-performance.md
project-docs/phase1-docs/: sub-phase_1.1_1.2_summary.md  sub-phase_1.3_1.4_summary.md  sub-phase_1.5_summary.md
src/: lib.rs  main.rs
src/engine/: matcher.rs  mod.rs
src/orderbook/: clob.rs  level.rs  mod.rs  node.rs
src/types/: mod.rs  order.rs  price.rs  receipt.rs  trade.rs
tests/: stress_test.rs
