[package]
name = "dark-hypercore"
version = "0.1.0"
edition = "2021"
description = "High-frequency Layer 1 blockchain with TEE-native privacy"
license = "MIT"
readme = "README.md"

# ============================================================================
# DEPENDENCIES
# ============================================================================
# Per official crates.io documentation (December 2025):
# - ssz_rs 0.9.0: Ethereum SSZ serialization
# - slab 0.4.11: Pre-allocated storage for uniform data types
# - rust_decimal 1.39.0: Fixed-point decimal math (no floating point)
# ============================================================================

[dependencies]
# SSZ serialization - Ethereum consensus format
# https://docs.rs/ssz_rs/0.9.0
# Provides: SimpleSerialize derive macro, Serialize/Deserialize traits
ssz_rs = "0.9.0"

# Pre-allocated order storage - O(1) operations
# https://docs.rs/slab/0.4.11
# Provides: Slab<T> with insert/remove/get in O(1)
slab = "0.4.11"

# Fixed-point decimal math - NO floating point allowed!
# https://docs.rs/rust_decimal/1.39.0
# Provides: Decimal type with checked_* operations
rust_decimal = "1.39"

# Error handling
thiserror = "1.0"

# Hashing for state roots (SHA-256)
sha2 = "0.10"

# Hex encoding for state root display
hex = "0.4"

[dev-dependencies]
# Benchmarking framework
criterion = { version = "0.5", features = ["html_reports"] }

# Test data generation (deterministic with seed)
rand = "0.8"
rand_chacha = "0.3"

# ============================================================================
# RELEASE PROFILE - Optimized for maximum performance
# ============================================================================
# NOTE: LTO causes segfaults with current ssz_rs/slab combination.
# Using conservative settings that still achieve excellent performance.
[profile.release]
opt-level = 3          # Maximum optimization
lto = false            # LTO disabled - causes segfaults with slab
codegen-units = 1      # Single codegen unit for better optimization
debug = 1              # Minimal debug info for profiling

# ============================================================================
# BENCHMARK PROFILE - Same as release but with debug symbols
# ============================================================================
# NOTE: LTO disabled to avoid segfaults (same as release profile)
[profile.bench]
opt-level = 3
lto = false            # LTO disabled - causes segfaults with slab
codegen-units = 1
debug = true

# ============================================================================
# BENCHMARKS
# ============================================================================
[[bench]]
name = "matching"
harness = false
